style(app): fix css alignment

--- a/src/app/drums/exercises/components/exercise-display/exercise-display.component.scss
+++ b/src/app/drums/exercises/components/exercise-display/exercise-display.component.scss
@@ -6,6 +6,7 @@
 .exercise-display {
   &__details {
     display: flex;
+    justify-content: space-around;
     padding: 1rem;
     border: 1px solid #535d6e;
     margin-bottom: 2rem;
